update bootstarp in common

--- a/SDM_webApp/web/pages/storesAreaAndContent/storesAreaAndContent.html
+++ b/SDM_webApp/web/pages/storesAreaAndContent/storesAreaAndContent.html
@@ -1,10 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Stores area and content</title>
+    <title>Bootstrap Example</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <script src="../../common/jquery-2.0.3.min.js"></script>
+    <script src="../../common/context-path-helper.js"></script>
+    <link rel="stylesheet" href="../../common/bootstrap-4.3.1-dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../../common/bootstrap-4.3.1-dist/js/bootstrap.min.css">
 </head>
 <body>
-<h1>mmm bop</h1>
+
+
+    <!-- Two columns: 50% width on large and up-->
+    <div class="row">
+        <div class="col-lg">
+        <h1>yuval and dani are best frinds</h1>
+        </div>
+        <div class="col-lg">2 of 2</div>
+    </div>
+
+    <!-- Four columns: 25% width on large and up -->
+    <div class="row">
+        <div class="col-lg">1 of 4</div>
+        <div class="col-lg">2 of 4</div>
+        <div class="col-lg">3 of 4</div>
+        <div class="col-lg">4 of 4</div>
+    </div>
 </body>
 </html>
+
