main page started

--- a/SDM_webApp/web/pages/storesAreaAndContent/storesAreaAndContent.html
+++ b/SDM_webApp/web/pages/storesAreaAndContent/storesAreaAndContent.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="../../common/jquery-2.0.3.min.js"></script>
     <script src="../../common/context-path-helper.js"></script>
+    <script src="storesAreaAndContent.js"></script>
     <link rel="stylesheet" href="../../common/bootstrap-4.3.1-dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="../../common/bootstrap-4.3.1-dist/js/bootstrap.min.css">
 </head>
@@ -15,9 +16,16 @@
     <!-- Two columns: 50% width on large and up-->
     <div class="row">
         <div class="col-lg">
-        <h1>yuval and dani are best frinds</h1>
+            <div class="row">
+                name:
+                <span id="nameTag"></span>
+            </div>
+            <div class="row">
+                type:
+                <span id="typeTag"></span>
+            </div>
         </div>
-        <div class="col-lg">2 of 2</div>
+        <div class="col-lg"></div>
     </div>
 
     <!-- Four columns: 25% width on large and up -->
