second page servlet not responding

--- a/SDM_webApp/web/pages/signup/signup.html
+++ b/SDM_webApp/web/pages/signup/signup.html
@@ -23,9 +23,9 @@
         <input type="text" name="username" class=""/>
         <input type="submit" value="Login"/>
         <div class="custom-control custom-checkbox">
-            <input type="checkbox" class="custom-control-input" id="customer">
+            <input type="checkbox" class="custom-control-input"  name="customerCB" id="customer">
             <label class="custom-control-label" for="customer">Customer</label>
-            <input type="checkbox" class="custom-control-input" id="store_owner">
+            <input type="checkbox" class="custom-control-input" name="store_owner" id="store_owner">
             <label class="custom-control-label" for="store_owner">Store owner</label>
         </div>
     </form>
