need to check gson return from UserListServlet

--- a/SDM_webApp/web/pages/signup/signup.html
+++ b/SDM_webApp/web/pages/signup/signup.html
@@ -9,7 +9,8 @@
     <script src="../../common/jquery-2.0.3.min.js"></script>
     <script src="../../common/context-path-helper.js"></script>
     <script src="signup.js"></script>
-    <link rel="stylesheet" href="../../common/bootstrap.min.css">
+    <link rel="stylesheet" href="../../common/bootstrap-4.3.1-dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../../common/bootstrap-4.3.1-dist/js/bootstrap.min.css">
     <!-- Link jQuery JavaScript library in order to use the $ (jQuery) method-->
 
     <!-- and\or any other scripts you might need to operate the JSP file behind the scene once it arrives to the client-->
