started file upload

--- a/SDM_webApp/web/pages/storesAreaAndContent/storesAreaAndContent.html
+++ b/SDM_webApp/web/pages/storesAreaAndContent/storesAreaAndContent.html
@@ -12,16 +12,6 @@
 <body style="margin-left: 20px;">
     <!-- Two columns: 50% width on large and up-->
     <div class="row">
-        <div class="col-lg-2">
-            <div class="row">
-                name:
-                <span id="nameTag"></span>
-            </div>
-            <div class="row">
-                type:
-                <span id="typeTag"></span>
-            </div>
-        </div>
         <div class="col-lg-7">
             <div class="input-group">
                 <div class="input-group-prepend">
@@ -38,7 +28,12 @@
 
     <!-- Four columns: 25% width on large and up -->
     <div class="row">
-        <div class="col-lg">1 of 4</div>
+        <div class="col-lg">
+            <div class="input">
+                <ul id="userslist">
+                </ul>
+            </div>
+        </div>
         <div class="col-lg">2 of 4</div>
         <div class="col-lg">3 of 4</div>
         <div class="col-lg">4 of 4</div>
