started working on file upload

--- a/SDM_webApp/web/pages/storesAreaAndContent/storesAreaAndContent.html
+++ b/SDM_webApp/web/pages/storesAreaAndContent/storesAreaAndContent.html
@@ -27,16 +27,35 @@
     </div>
 
     <!-- Four columns: 25% width on large and up -->
+
+
     <div class="row">
-        <div class="col-lg">
-            <div class="input">
-                <ul id="userslist">
-                </ul>
+        <div class="col-lg-2">
+            <div class="row">
+                <div class="input">
+                    <label>users list</label>
+                    <ul id="userslist">
+                    </ul>
+                </div>
             </div>
         </div>
-        <div class="col-lg">2 of 4</div>
-        <div class="col-lg">3 of 4</div>
-        <div class="col-lg">4 of 4</div>
+        <div class="col-lg">
+            <table class="table table-striped">
+                <thead>
+                <tr>
+                    <th scope="col">Owner name</th>
+                    <th scope="col">Zone name</th>
+                    <th scope="col">Total items</th>
+                    <th scope="col">Total stores</th>
+                    <th scope="col">Total orders</th>
+                    <th scope="col">Average order price</th>
+                </tr>
+                </thead>
+                <tbody>
+
+                </tbody>
+            </table>
+        </div>
     </div>
 </body>
 </html>
