--- a/SDM_webApp/web/pages/storesAreaAndContent/storesAreaAndContent.html
+++ b/SDM_webApp/web/pages/storesAreaAndContent/storesAreaAndContent.html
@@ -18,9 +18,9 @@
                     <button type="button" class="btn" id="uploadButton">upload file</button>
                 </div>
                 <div class="custom-file">
-                    <input type="file" class="custom-file-input" id="inputGroupFile01"
+                    <input type="file" class="custom-file-input" id="fileChooser"
                            aria-describedby="inputGroupFileAddon01">
-                    <label class="custom-file-label" for="inputGroupFile01">Choose file</label>
+                    <label class="custom-file-label" for="fileChooser">Choose file</label>
                 </div>
             </div>
         </div>
