--- a/SDM_webApp/web/pages/storesAreaAndContent/storesAreaAndContent.html
+++ b/SDM_webApp/web/pages/storesAreaAndContent/storesAreaAndContent.html
@@ -15,7 +15,7 @@
         <div class="col-lg-7">
             <div class="input-group">
                 <div class="input-group-prepend">
-                    <button type="button" class="btn" id="uploadButton">upload file</button>
+                    <button type="button" class="btn" id="uploadButton" onclick="uploadFile()">upload file</button>
                 </div>
                 <div class="custom-file">
                     <input type="file" class="custom-file-input" id="fileChooser"
@@ -25,9 +25,6 @@
             </div>
         </div>
     </div>
-
-    <!-- Four columns: 25% width on large and up -->
-
 
     <div class="row">
         <div class="col-lg-2">
