--- a/SDM_webApp/web/pages/storesAreaAndContent/storesAreaAndContent.html
+++ b/SDM_webApp/web/pages/storesAreaAndContent/storesAreaAndContent.html
@@ -37,7 +37,7 @@
             </div>
         </div>
         <div class="col-lg">
-            <table class="table table-striped">
+            <table class="table table-striped" id="zoneTable">
                 <thead>
                 <tr>
                     <th scope="col">Owner name</th>
@@ -48,8 +48,7 @@
                     <th scope="col">Average order price</th>
                 </tr>
                 </thead>
-                <tbody>
-
+                <tbody id="tableBody">
                 </tbody>
             </table>
         </div>
