file upload checks

--- a/SDM_webApp/web/pages/storesAreaAndContent/storesAreaAndContent.html
+++ b/SDM_webApp/web/pages/storesAreaAndContent/storesAreaAndContent.html
@@ -21,7 +21,7 @@
                 <div class="custom-file">
                     <input type="file" class="custom-file-input" id="fileChooser"
                            aria-describedby="inputGroupFileAddon01">
-                    <label class="custom-file-label" for="fileChooser">Choose file</label>
+                    <label class="custom-file-label" for="fileChooser" id="fileChooserLabel">Choose file</label>
                 </div>
             </div>
         </div>
