getting zone from table

--- a/SDM_webApp/web/pages/storesAreaAndContent/storesAreaAndContent.html
+++ b/SDM_webApp/web/pages/storesAreaAndContent/storesAreaAndContent.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="../../common/bootstrap-4.3.1-dist/css/bootstrap.min.css">
 </head>
 <body style="margin-left: 20px;">
-    <!-- Two columns: 50% width on large and up-->
+<!--first row-->
     <div class="row">
         <div class="col-lg-7">
             <div class="input-group">
@@ -27,8 +27,9 @@
         </div>
     </div>
 
+<!--second row-->
     <div class="row">
-        <div class="col-lg-2">
+        <div class="col-lg">
             <div class="row">
                 <div class="input">
                     <label>users list</label>
@@ -52,6 +53,11 @@
                 <tbody id="tableBody">
                 </tbody>
             </table>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-lg">
+            <button type="button" class="btn btn-primary" onclick="nextPage">next</button>
         </div>
     </div>
 </body>
