--- a/SDM_webApp/web/pages/storesAreaAndContent/storesAreaAndContent.html
+++ b/SDM_webApp/web/pages/storesAreaAndContent/storesAreaAndContent.html
@@ -8,6 +8,7 @@
     <script src="../../common/context-path-helper.js"></script>
     <script src="../../common/jquery_form.js"></script>
     <script src="storesAreaAndContent.js"></script>
+    <script src="../../common/jquery.redirect-master/jquery.redirect.js"></script>
     <link rel="stylesheet" href="../../common/bootstrap-4.3.1-dist/css/bootstrap.min.css">
 </head>
 <body style="margin-left: 20px;">
@@ -57,7 +58,7 @@
     </div>
     <div class="row">
         <div class="col-lg">
-            <button type="button" class="btn btn-primary" onclick="nextPage">next</button>
+            <button type="button" class="btn btn-primary" onclick="nextPage()" id="nextButton">next</button>
         </div>
     </div>
 </body>
