--- a/SDM_webApp/web/pages/localStores/localStores.html
+++ b/SDM_webApp/web/pages/localStores/localStores.html
@@ -9,6 +9,7 @@
     <script src="../../common/context-path-helper.js"></script>
     <script src="localStores.js"></script>
     <link rel="stylesheet" href="../../common/bootstrap-4.3.1-dist/css/bootstrap.min.css">
+    <script src="../../common/bootstrap-4.3.1-dist/js/bootstrap.bundle.js"></script>
 </head>
 <body>
 <!--item table-->
@@ -42,18 +43,15 @@
     </div>
 
     <div class="row">
-
-        </div>
-    </div>
-    <div class="row">
-        <div class="row">
-            <section class="page-element col-xs-9 col-sm-9 col-md-9 col-lg-7">
-                <div class="page-element">part1</div>
-            </section>
-
-            <section class="page-element col-xs-3 col-sm-3 col-md-3 col-lg-5">
-                <div class="page-element">part2</div>
-            </section>
+        <div class="dropdown">
+            <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Dropdown
+            </button>
+            <div class="dropdown-menu" aria-labelledby="dropdownMenu2">
+                <button class="dropdown-item" type="button">Action</button>
+                <button class="dropdown-item" type="button">Another action</button>
+                <button class="dropdown-item" type="button">Something else here</button>
+            </div>
         </div>
     </div>
 </body>
