--- a/SDM_webApp/web/pages/localStores/localStores.html
+++ b/SDM_webApp/web/pages/localStores/localStores.html
@@ -12,10 +12,23 @@
 </head>
 <body>
 <!--item table-->
+
     <div class="row">
-        <div class="col-lg-12">
+        <div class="col-lg-3">
+            <h1>User actions:</h1>
+            <div class="col-lg-6 mb-3">
+                <input class="btn btn-primary btn-block" type="button" value="Place an order">
+            </div>
+            <div class="col-lg-6 mb-3">
+                <input class="btn btn-primary btn-block" type="button" value="Rate a store ">
+            </div>
+            <div class="col-lg-6 mb-3">
+                <input class="btn btn-primary btn-block" type="button" value="Order details">
+            </div>
+        </div>
+        <div class="col-lg-9">
+            <h1>item list</h1>
             <table class="table" id="itemTable">
-                <h1>Zone</h1>
                 <h3>All items in this zone:</h3>
                 <thead class="thead-dark">
                 <tr>
@@ -28,17 +41,10 @@
                 </tr>
                 </thead>
                 <tbody>
-                <tr>
-                    <th scope="row">1</th>
-                    <td>Mark</td>
-                    <td>Otto</td>
-                    <td>@mdo</td>
-                    <td>sd</td>
-                    <td>sabih</td>
-                </tr>
                 </tbody>
             </table>
-        </div>
+        </div >
+
     </div>
 
     <h3>Stores by name:</h3>
