--- a/SDM_webApp/web/pages/localStores/localStores.html
+++ b/SDM_webApp/web/pages/localStores/localStores.html
@@ -13,20 +13,19 @@
 </head>
 <body>
 <!--item table-->
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" >PlaceOrder</a>
+    <button class="navbar-toggler" id ="firstBtn" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    </button>
+    <a class="navbar-brand" href="#">Rate a store</a>
+    <button class="navbar-toggler" id ="secondBtn" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    </button>
+    <a class="navbar-brand" href="#">Your orders</a>
+    <button class="navbar-toggler" id="thirdBtn" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    </button>
 
+</nav>
     <div class="row">
-        <div class="col-lg-3">
-            <h1>User actions:</h1>
-            <div class="col-lg-6 mb-3">
-                <input class="btn btn-primary btn-block" type="button" value="Place an order">
-            </div>
-            <div class="col-lg-6 mb-3">
-                <input class="btn btn-primary btn-block" type="button" value="Rate a store ">
-            </div>
-            <div class="col-lg-6 mb-3">
-                <input class="btn btn-primary btn-block" type="button" value="Order details">
-            </div>
-        </div>
         <div class="col-lg-9">
             <h1>item list</h1>
             <table class="table" id="itemTable">
