working on drop down

--- a/SDM_webApp/web/pages/localStores/localStores.html
+++ b/SDM_webApp/web/pages/localStores/localStores.html
@@ -48,16 +48,8 @@
     </div>
 
     <div class="row">
-        <div class="dropdown">
-            <button class="btn btn-secondary dropdown-toggle" type="button" id="dropDownShownValue" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                choose store
-            </button>
-            <div class="dropdown-menu" aria-labelledby="storesDropDown" id="storesDropDown">
-                <button class="dropdown-item" type="button">Action</button>
-                <button class="dropdown-item" type="button">Another action</button>
-                <button class="dropdown-item" type="button">Something else here</button>
-            </div>
-        </div>
+        <select class='btn btn-secondary' id="storesDropDown">
+        </select>
     </div>
 </body>
 </html>
