--- a/SDM_webApp/web/pages/localStores/localStores.html
+++ b/SDM_webApp/web/pages/localStores/localStores.html
@@ -13,14 +13,14 @@
 </head>
 <body>
 <!--item table-->
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" >PlaceOrder</a>
-    <button class="navbar-toggler" id ="firstBtn" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+<nav class="navbar navbar-expand-lg navbar-inverse">
+    <a class="navbar-brand" href="#" id ="firstBtnText" ></a>
+    <button class="navbar-toggler"  type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     </button>
-    <a class="navbar-brand" href="#">Rate a store</a>
+    <a class="navbar-brand" href="#" id ="secondBtnText" ></a>
     <button class="navbar-toggler" id ="secondBtn" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     </button>
-    <a class="navbar-brand" href="#">Your orders</a>
+    <a class="navbar-brand" href="#" id ="thirdBtnText" ></a>
     <button class="navbar-toggler" id="thirdBtn" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     </button>
 
