--- a/SDM_webApp/web/pages/localStores/localStores.html
+++ b/SDM_webApp/web/pages/localStores/localStores.html
@@ -48,7 +48,7 @@
     </div>
 
     <div class="row">
-        <select class='btn btn-secondary' id="storesDropDown">
+        <select class='btn btn-secondary' id="storesDropDown" name="storesDropDown">
         </select>
     </div>
 </body>
