working on diffrence between owner and client on 3rd pg

--- a/SDM_webApp/web/pages/localStores/localStores.html
+++ b/SDM_webApp/web/pages/localStores/localStores.html
@@ -10,6 +10,8 @@
     <script src="localStores.js"></script>
     <link rel="stylesheet" href="../../common/bootstrap-4.3.1-dist/css/bootstrap.min.css">
     <script src="../../common/bootstrap-4.3.1-dist/js/bootstrap.bundle.js"></script>
+    <script src="../../common/bootstrap-4.3.1-dist/js/bootstrap.js"></script>
+
 </head>
 <body>
 <!--item table-->
@@ -23,7 +25,6 @@
     <a class="navbar-brand" href="#" id ="thirdBtnText" ></a>
     <button class="navbar-toggler" id="thirdBtn" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     </button>
-
 </nav>
     <div class="row">
         <div class="col-lg-9">
