working on diffrence between owner and client on 3rd pg. nav bar done

--- a/SDM_webApp/web/pages/localStores/localStores.html
+++ b/SDM_webApp/web/pages/localStores/localStores.html
@@ -9,22 +9,34 @@
     <script src="../../common/context-path-helper.js"></script>
     <script src="localStores.js"></script>
     <link rel="stylesheet" href="../../common/bootstrap-4.3.1-dist/css/bootstrap.min.css">
+<!--
+    <link href="../../common/bootstrap-4.3.1-dist/fontAesome/font-awesome.css" rel="stylesheet">
+-->
     <script src="../../common/bootstrap-4.3.1-dist/js/bootstrap.bundle.js"></script>
     <script src="../../common/bootstrap-4.3.1-dist/js/bootstrap.js"></script>
 
 </head>
 <body>
 <!--item table-->
-<nav class="navbar navbar-expand-lg navbar-inverse">
-    <a class="navbar-brand" href="#" id ="firstBtnText" ></a>
-    <button class="navbar-toggler"  type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    </button>
-    <a class="navbar-brand" href="#" id ="secondBtnText" ></a>
-    <button class="navbar-toggler" id ="secondBtn" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    </button>
-    <a class="navbar-brand" href="#" id ="thirdBtnText" ></a>
-    <button class="navbar-toggler" id="thirdBtn" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    </button>
+<nav class="navbar navbar-dark  navbar-expand-lg navbar-dark bg-dark ">
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+            <li class="nav-item">
+                <a class="nav-link" id="firstBtnText" href="#"></a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" id="secondBtnText" href="#"></a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" id="thirdBtnText" href="#"></a>
+            </li>
+        </ul>
+        <ul class="navbar-nav ml-auto">
+            <li class="nav-item">
+                <a class="nav-link" id="userNameText" href="#"></a>
+            </li>
+        </ul>
+    </div>
 </nav>
     <div class="row">
         <div class="col-lg-9">
