--- a/SDM_webApp/web/pages/signup/signup.html
+++ b/SDM_webApp/web/pages/signup/signup.html
@@ -9,7 +9,7 @@
     <script src="../../common/jquery-2.0.3.min.js"></script>
     <script src="../../common/context-path-helper.js"></script>
     <script src="signup.js"></script>
-    <link rel="stylesheet" href="../../common/bootstrap-4.3.1-dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../../common/bootstrap-4.3.1-dist/css/bootstrap.css">
     <link rel="stylesheet" href="../../common/bootstrap-4.3.1-dist/js/bootstrap.js">
     <!-- Link jQuery JavaScript library in order to use the $ (jQuery) method-->
 
@@ -17,11 +17,9 @@
 </head>
 <body>
 <div class="container">
-    <h1>Welcome to the Online Chat</h1>
-    <br/>
     <h2>Please enter a unique user name:</h2>
     <form method="GET" action="login">
-        <input type="text" name="username" class=""/>
+        <input type="text" name="username" class="" id="nameText"/>
         <input type="submit" value="Login"/>
         <div class="custom-control custom-checkbox">
             <input type="checkbox" class="custom-control-input"  name="customerCB" id="customer">
@@ -29,6 +27,8 @@
             <input type="checkbox" class="custom-control-input" name="store_owner" id="store_owner">
             <label class="custom-control-label" for="store_owner">Store owner</label>
         </div>
+
+
     </form>
 </div>
 </body>
