sign up template done

--- a/SDM_webApp/web/pages/localStores/localStores.html
+++ b/SDM_webApp/web/pages/localStores/localStores.html
@@ -19,7 +19,7 @@
 </head>
 <body>
 <!--item table-->
-<nav class="navbar navbar-dark  navbar-expand-lg navbar-dark bg-dark ">
+<nav class="navbar fixed-top navbar-dark  navbar-expand-lg navbar-dark bg-dark ">
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item">
