store info complete

--- a/SDM_webApp/web/pages/storesAreaAndContent/storesAreaAndContent.html
+++ b/SDM_webApp/web/pages/storesAreaAndContent/storesAreaAndContent.html
@@ -14,6 +14,7 @@
 
     <div class="row">
         <div class="col-lg-7">
+            <span id="uploadFileSpan"></span>
             <div class="input-group">
                 <div class="input-group-prepend">
                     <button type="button" class="btn" id="uploadButton" onclick="uploadFile()">upload file</button>
